HTTPD playbook completed

--- a/food-v1.yml
+++ b/food-v1.yml
@@ -5,5 +5,5 @@
 
   tasks:
    - package: name=git state=present
-   - git: repo=https;//github.com/demoglot/html-samples-doctor.git dest=/var/www/html
+   - git: repo=https://github.com/demoglot/html-samples-doctor.git dest=/var/www/html
 
